k8s/runner/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: puklic-ci
  labels:
    app.kubernetes.io/name: puklic-ci
    app.kubernetes.io/part-of: puklic
